...
    <!--Database-->
    <string name="title_activity_database">Your Saved Resumes</string>
    <string name="button_save">Save</string>
    <string name="rym_description">ResYouMe is an app created with the intent of making networking events like expo easier for students and recruiters. It accomplishes this by allowing students to upload their resumes and transfer them to recruiters with NFC.
    ResYouMe also allows recruiters to create company business cards that can be sent to a student in exchange for their resumes and both students and recruiters can reformat and organize the documents they collect. Students can even collect additional information about companies using the FullContact API.</string>
    <string name="send_by_nfc">Send</string>
    <string name="display_resume">View</string>
    <string name="edit_NR">Set Rating and Notes</string>
    <string name="edit_resume">Edit</string>
    <string-array name="styles">
        <item>Basic</item>
        <item>Card</item>
        <item>McCombs</item>
...
