...
            android:id="@+id/styleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="  Style:" />

        <Spinner
            android:id="@+id/style_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
...
